adding sample models

--- a/app/src/main/res/layout/activity_aractivity.xml
+++ b/app/src/main/res/layout/activity_aractivity.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ARActivity">
+    tools:context="com.hrishikeshkayal123.ar.navigation.ARActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/sceneform_fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
